Fix changed_when check so status doesn't fail

--- a/tasks/async_status.yml
+++ b/tasks/async_status.yml
@@ -4,7 +4,7 @@
   async_status:
     jid: "{{ async_result.ansible_job_id }}"
   failed_when: result | failed
-  changed_when: result | changed
+  changed_when: result is changed
   register: result
   until: result.finished | bool
   # Guarantee at least one retry
